--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "f17d751c",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
    ],
    "source": [
     "is_student = True\n",
-    "print(True)"
+    "print(is_student)"
    ]
   },
   {
